feat: implement search by title and by store